April 7th 5:30 push

--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "**INTRODUCTION**\n",
     "\n",
-    "Diabetes is a disease in which the human body is no longer able to control the delicate balance of sugar in the bloodstream, which can have serious implications. It is split up into three main types, each with their own causes and risk factors. Type 1 diabetes happens when the pancreas no longer produces insulin, a protein that will decrease the amount of glucose (sugar) in the blood; while the cause of type 1 diabetes isn’t yet known, there is some indication that there might be a significant hereditary component. In type 2 diabetes the body becomes resistant to its own insulin and while the cause is still mostly unknown, excess body weight, high blood pressure, genetics, and age are all factors that contribute. Gestational diabetes is similar to type 2 diabetes, the main difference being that pregnancy hormones cause its onset(1).\n",
+    "Diabetes is a disease in which the human body is no longer able to control the delicate balance of sugar in the bloodstream, which can have serious implications. It is split up into three main types, each with its causes and risk factors. Type 1 diabetes happens when the pancreas no longer produces insulin, a protein that will decrease the amount of glucose (sugar) in the blood; while the cause of type 1 diabetes isn’t yet known, there is some indication that there might be a significant hereditary component. In type 2 diabetes the body becomes resistant to its insulin and while the cause is still mostly unknown, excess body weight, high blood pressure, genetics, and age are all factors that contribute. Gestational diabetes is similar to type 2 diabetes, the main difference being that pregnancy hormones cause its onset(1).\n",
     "\n",
     "We seek to explore the following question: Can we determine if a woman has diabetes based on predictors such as blood glucose levels, blood pressure, number of pregnancies, insulin levels, BMI, age, skin thickness, and genetics (called diabetes pedigree function)? To answer this question, we use data collected by the National Institute of Diabetes and Digestive and Kidney Diseases. The particular data set surveyed women over the age of 21 of Pima Indian heritage(2)."
    ]
@@ -112,7 +112,7 @@
    "source": [
     "**METHODOLOGY**\n",
     "\n",
-    "We plan to use only the most relevant columns which help us conclude whether or not a person has diabetes or not. We will conduct our data analysis by comparing variables and their distribution of positive versus negative results of diabetes diagnosis. We will isolate each of the variables in turn, and compare the two outcomes."
+    "We plan to use only the most relevant columns which help us conclude whether or not a person has diabetes or not. We will conduct our data analysis by comparing variables and their distribution of positive versus negative results of a diabetes diagnosis. We will isolate each of the variables in turn, and compare the two outcomes."
    ]
   },
   {
@@ -792,7 +792,7 @@
    "source": [
     "##### Graph 1: Amount of Pregnancies per woman, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, as you increase the number of pregnancies, the proportion of women with diabetes versus women without diabetes increases. It is pertinent to note that while the peak for the distribution of women with diabetes is at zero pregnancies, since the peak for the distribution of women without diabetes is also at zero pregnancies, this suggests that the dataset has a disproportionate amount of women with zero pregnancies."
+    "As we see above, as you increase the number of pregnancies, the proportion of women with diabetes versus women without diabetes increases. It is pertinent to note that while the peak for the distribution of women with diabetes is at zero pregnancies since the peak for the distribution of women without diabetes is also at zero pregnancies, this suggests that the dataset has a disproportionate amount of women with zero pregnancies."
    ]
   },
   {
@@ -846,7 +846,7 @@
    "source": [
     "##### Graph 2: Glucose Levels in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. From a glucose level of about 80-140, there is a significantly higher proportion of women without diabetes, where there is a more equal distribution of women with/without diabetes from a glucose level of about 150+. It is important to note that the centers of women without diabetes and women with diabetes are not the same, indicating that on average, women with diabetes have a higher glucose level than women without diabetes."
+    "As we see above, there is a significant difference in this graph. From a glucose level of about 80-140, there is a significantly higher proportion of women without diabetes, whereas there is a more equal distribution of women with/without diabetes from a glucose level of about 150+. It is important to note that the centers of women without diabetes and women with diabetes are not the same, indicating that on average, women with diabetes have a higher glucose level than women without diabetes."
    ]
   },
   {
@@ -900,7 +900,7 @@
    "source": [
     "##### Graph 3: Blood Pressure Levels in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. The proportion of women without diabetes is much higher than those with diabetes. The distribution is very similar, suggesting uniformity of the variable. When the means of the distributions of women with and without diabetes are compared, we see that the means are very similar, with the mean for women with diabetes being higher, suggesting that higher blood pressure has a weak correlated with diabetes."
+    "As we see above, there is a significant difference in this graph. The proportion of women without diabetes is much higher than those with diabetes. The distribution is very similar, suggesting uniformity of the variable. When the means of the distributions of women with and without diabetes are compared, we see that the means are very similar, with the mean for women with diabetes being higher, suggesting that higher blood pressure has a weak correlation with diabetes."
    ]
   },
   {
@@ -1008,7 +1008,7 @@
    "source": [
     "##### Graph 5: Insulin Levels in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. Low Insulin levels seem to correlate with higher frequency of women with diabetes. When the means of the distributions of women with and without diabetes are compared, we see that the means are similar, with the mean for women with diabetes being higher, suggesting that higher insulin leads to having diabetes."
+    "As we see above, there is a significant difference in this graph. Low Insulin levels seem to correlate with a higher frequency of women with diabetes. When the means of the distributions of women with and without diabetes are compared, we see that the means are similar, with the mean for women with diabetes being higher, suggesting that higher insulin leads to having diabetes."
    ]
   },
   {
