April 8th 11:50 am

--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -101,9 +101,9 @@
    "source": [
     "**INTRODUCTION**\n",
     "\n",
-    "Diabetes is a disease in which the human body is no longer able to control the delicate balance of sugar in the bloodstream, which can have serious implications. It is split up into three main types, each with its causes and risk factors. Type 1 diabetes happens when the pancreas no longer produces insulin, a protein that will decrease the amount of glucose (sugar) in the blood; while the cause of type 1 diabetes isn’t yet known, there is some indication that there might be a significant hereditary component. In type 2 diabetes the body becomes resistant to its insulin and while the cause is still mostly unknown, excess body weight, high blood pressure, genetics, and age are all factors that contribute. Gestational diabetes is similar to type 2 diabetes, the main difference being that pregnancy hormones cause its onset(1).\n",
+    "Diabetes is a disease in which the human body is no longer able to control the delicate balance of sugar in the bloodstream, which can have serious implications. It is split up into three main types, each with its causes and risk factors. Type 1 diabetes happens when the pancreas no longer produces insulin, a protein that will decrease the amount of glucose (sugar) in the blood; while the cause of type 1 diabetes isn’t yet known, there is some indication that there might be a significant hereditary component. In type 2 diabetes the body becomes resistant to its insulin and while the cause is still mostly unknown, excess body weight, high blood pressure, genetics, and age are all factors that contribute. Gestational diabetes is similar to type 2 diabetes, the main difference being that pregnancy hormones cause its onset(3).\n",
     "\n",
-    "We seek to explore the following question: Can we determine if a woman has diabetes based on predictors such as blood glucose levels, blood pressure, number of pregnancies, insulin levels, BMI, age, skin thickness, and genetics (called diabetes pedigree function)? To answer this question, we use data collected by the National Institute of Diabetes and Digestive and Kidney Diseases. The particular data set surveyed women over the age of 21 of Pima Indian heritage(2)."
+    "We seek to explore the following question: Can we determine if a woman has diabetes based on predictors such as blood glucose levels, blood pressure, number of pregnancies, insulin levels, BMI, age, skin thickness, and genetics (called diabetes pedigree function)? To answer this question, we use data collected by the National Institute of Diabetes and Digestive and Kidney Diseases. The particular data set surveyed women over the age of 21 of Pima Indian heritage(6)."
    ]
   },
   {
@@ -111,8 +111,7 @@
    "metadata": {},
    "source": [
     "**METHODOLOGY**\n",
-    "\n",
-    "We plan to use only the most relevant columns which help us conclude whether or not a person has diabetes or not. We will conduct our data analysis by comparing variables and their distribution of positive versus negative results of a diabetes diagnosis. We will isolate each of the variables in turn, and compare the two outcomes."
+    "\n"
    ]
   },
   {
@@ -145,6 +144,13 @@
     "url <- \"https://raw.githubusercontent.com/ehaniak/Group41/main/data/diabetes.csv\"\n",
     "diabetes <- read_csv(url)%>% \n",
     "    mutate(Outcome = as_factor(Outcome))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We downloaded the csv file from Kaggle and then uploaded it to our GitHub repository. We then saved our URL as an object in our notebook, and read that URL object using the read_csv function (3). Then we mutated the Outcome column to be a factor instead of a number, since the values 0 and 1 in the Outcome column represent the two outcomes of Diabetes or not diabetes respectively. We set a preliminary seed to ensure that our analysis can be reproduced (3). "
    ]
   },
   {
@@ -371,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Table 3: Diabetes dataset maximum"
+    "##### Table 3: Diabetes maximum values of all predictors "
    ]
   },
   {
@@ -440,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Table 4: Diabetes dataset minimum"
+    "##### Table 4: Diabetes minimum values of all predictors "
    ]
   },
   {
@@ -527,6 +533,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 5: All predicotrs with an outcome of 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -588,6 +601,13 @@
     "                            mean_Age_yes = mean(Age))\n",
     "\n",
     "summery_of_data_diabetes_outcome_mean_yes_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 6: The mean of predicotrs with an outcome of 1"
    ]
   },
   {
@@ -675,6 +695,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 7: All predicotrs with an outcome of 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -739,6 +766,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 8: The mean of predicotrs with an outcome of 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we summarized the data in terms of the mean of each predictor so that the x-intercepts of our histograms can be set. The mean of all the predictors that had an Outcome of 1 and respectively an Outcome of 0 were found as well. We repeated this for max and min with each predictor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -792,7 +833,7 @@
    "source": [
     "##### Graph 1: Amount of Pregnancies per woman, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, as you increase the number of pregnancies, the proportion of women with diabetes versus women without diabetes increases. It is pertinent to note that while the peak for the distribution of women with diabetes is at zero pregnancies since the peak for the distribution of women without diabetes is also at zero pregnancies, this suggests that the dataset has a disproportionate amount of women with zero pregnancies."
+    "Increasing the number of pregnancies correlates to a higher proportion of women with diabetes vs without diabetes. While most women with diabetes are in the 0 pregnancy bin, it is important to consider that fewer women have such a high number of pregnancies."
    ]
   },
   {
@@ -846,7 +887,7 @@
    "source": [
     "##### Graph 2: Glucose Levels in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. From a glucose level of about 80-140, there is a significantly higher proportion of women without diabetes, whereas there is a more equal distribution of women with/without diabetes from a glucose level of about 150+. It is important to note that the centers of women without diabetes and women with diabetes are not the same, indicating that on average, women with diabetes have a higher glucose level than women without diabetes."
+    "From glucose levels of 80 -140, there is a higher proportion of women without Diabetes, compared to above levels of 150+ where there is a roughly equal proportion of women with and without Diabetes. The centers of women with and without diabetes are not the same, indicating on average, women with diabetes have a higher glucose level than women without diabetes."
    ]
   },
   {
@@ -900,7 +941,7 @@
    "source": [
     "##### Graph 3: Blood Pressure Levels in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. The proportion of women without diabetes is much higher than those with diabetes. The distribution is very similar, suggesting uniformity of the variable. When the means of the distributions of women with and without diabetes are compared, we see that the means are very similar, with the mean for women with diabetes being higher, suggesting that higher blood pressure has a weak correlation with diabetes."
+    "As blood pressure increases, the proportion of women with diabetes increases. This indicates that high blood pressure has a correlation to diabetes. \n"
    ]
   },
   {
@@ -954,7 +995,7 @@
    "source": [
     "##### Graph 4: Skin Thickness Levels in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. We see the biggest difference in proportion around 12-30, and less so everywhere else. When the means of the distributions of women with and without diabetes are compared, we see that the means are very similar, with the mean for women with diabetes being higher, suggesting that higher skin thickness leads to diabetes."
+    "As skin thickness increases, the proportion of women with diabetes increases. The biggest difference in proportion in skin thickness is seen around 12- 30 mm, after which the proportions of women with diabetes increases as skin thickness increases, suggesting a correlation between higher skin thickness and diabetes. "
    ]
   },
   {
@@ -1115,7 +1156,7 @@
    "metadata": {},
    "source": [
     "##### Graph 7: Diabetes Pedigree in Women, coloured by diabetes diagnosis\n",
-    "As we see above, there is a significant difference in this graph. When the means of the distributions of women with and without diabetes are compared, we see that the mean for women with diabetes is higher than that of women without diabetes, suggesting that a higher pedigree level is correlated with having diabetes."
+    "Increasing the diabetes pedigree level increases the the proportion of women with diabetes, indicating that there is a postivie correlation between genetics and diabetes. "
    ]
   },
   {
@@ -1169,7 +1210,14 @@
    "source": [
     "##### Graph 8: Age in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. There are far less women under 30 with diabetes than there are for women ages 30 and higher. When the means of the distributions of women with and without diabetes are compared, we see that the average age for women with diabetes is higher than for women without diabetes, suggesting that higher age is correlated with having diabetes."
+    "In this graph, there are less women under 30 with diabetes than women over 30. The proportion of women with diabetes is proportional to the increase of age."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next step we took was to determine which predictors to use to answer our question, based on their relevance to diabetes. In order to do this, we visualized the frequency of women with diabetes for each predictor, using histograms because it was easy to visualize the outcome since there are only two possibilities (4). To do so ggplot and geom_histogram were used (3). More importantly by creating two different x-intercepts one for women with diabetes (blue) and one for women without diabetes (red) a clear visualization was created. These codes were necessary to construct a distribution difference for each predictor between women with and women without diabetes."
    ]
   },
   {
