April 8th 12:53 am

--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -99,6 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "**INTRODUCTION**\n",
     "\n",
     "Diabetes is a disease in which the human body is no longer able to control the delicate balance of sugar in the bloodstream, which can have serious implications. It is split up into three main types, each with its causes and risk factors. Type 1 diabetes happens when the pancreas no longer produces insulin, a protein that will decrease the amount of glucose (sugar) in the blood; while the cause of type 1 diabetes isn’t yet known, there is some indication that there might be a significant hereditary component. In type 2 diabetes the body becomes resistant to its insulin and while the cause is still mostly unknown, excess body weight, high blood pressure, genetics, and age are all factors that contribute. Gestational diabetes is similar to type 2 diabetes, the main difference being that pregnancy hormones cause its onset(3).\n",
@@ -1229,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1241,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1366,6 +1367,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 9: The accuracy of the diebetes data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -1394,6 +1402,13 @@
     "    geom_line()+ \n",
     "    labs(x = \"K value\", y= \"Mean Accuracy\")\n",
     "accuracy_diabetes_plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Graph 9: Graph to indicate our K value "
    ]
   },
   {
@@ -1515,6 +1530,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table 10: Predicted and True values as a tibble"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -1623,18 +1645,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Red: Predicted Diabetes, Actually not Diabetes\n",
-    "#### Green: Predicted Diabetes, Actually Diabetes\n",
-    "#### Purple: Predicted not Diabetes, Actually not Diabetes\n",
-    "#### Blue: Predicted not Diabetes, Actually Diabetes"
+    "Red: Predicted Diabetes, Actually not Diabetes\n",
+    "\n",
+    "Green: Predicted Diabetes, Actually Diabetes\n",
+    "\n",
+    "Purple: Predicted not Diabetes, Actually not Diabetes\n",
+    "\n",
+    "Blue: Predicted not Diabetes, Actually Diabetes"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Table 11: Predicted and True values as a table\n",
+    "\n",
+    "Graph 10:"
+   ]
   }
  ],
  "metadata": {
