--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -1211,7 +1211,7 @@
    "source": [
     "##### Graph 8: Age in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "In this graph, there are less women under 30 with diabetes than women over 30. The proportion of women with diabetes is proportional to the increase of age."
+    "In this graph, there are less women under 30 with diabetes than women over 30. The proportion of women with diabetes is proportional to age."
    ]
   },
   {
