--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Frequency of Diabetes in Pima Indian Women Over the Age of 21**\n"
+    "**Predicting Diabetes in Women of Pima Indian Descent over the age of 21**\n"
    ]
   },
   {
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
     "    geom_vline(xintercept = summery_of_data_diabetes_outcome_mean_yes_table$mean_Pregnancies_yes,\n",
     "               linetype = \"dashed\", size = 1, colour =\"steel blue\") +\n",
     "    labs(x = \"Amount of Pregnancies per Woman\", \n",
-    "         y = \"Frequency\", \n",
+    "         y = \"Frequency\", xintercept = \"outcome\",\n",
     "         fill = \"Diabetes Outcome: Yes=1, No=0\") +\n",
     "    theme(text = element_text(size = 15)) + \n",
     "    ggtitle(\"Frequency of Pregnancies per Woman\")\n",
