Added the references 2:02 pm

--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We downloaded the csv file from Kaggle and then uploaded it to our GitHub repository. We then saved our URL as an object in our notebook, and read that URL object using the read_csv function (3). Then we mutated the Outcome column to be a factor instead of a number, since the values 0 and 1 in the Outcome column represent the two outcomes of Diabetes or not diabetes respectively. We set a preliminary seed to ensure that our analysis can be reproduced (3). "
+    "We downloaded the csv file from Kaggle then saved the URL as an object, and read the URL in as a csv file (3). Then we mutated the Outcome column to be a factor instead of a number, since outcomes 0 and 1 correspond to a diabetes diagnosis. "
    ]
   },
   {
@@ -777,7 +777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we summarized the data in terms of the mean of each predictor so that the x-intercepts of our histograms can be set. The mean of all the predictors that had an Outcome of 1 and respectively an Outcome of 0 were found as well. We repeated this for max and min with each predictor."
+    "We summarized the data in terms of the mean of each predictor so that the x-intercepts of our histograms can be set. The mean of all the predictors that had an Outcome of 1 and respectively an Outcome of 0 were found as well. We repeated this for maximum and minimum with each predictor. "
    ]
   },
   {
@@ -834,7 +834,7 @@
    "source": [
     "##### Graph 1: Amount of Pregnancies per woman, coloured by diabetes diagnosis\n",
     "\n",
-    "Increasing the number of pregnancies correlates to a higher proportion of women with diabetes vs without diabetes. While most women with diabetes are in the 0 pregnancy bin, it is important to consider that fewer women have such a high number of pregnancies."
+    "Increasing the number of pregnancies correlates to a higher proportion of women with diabetes vs without diabetes. While most women with diabetes are in the 0 pregnancy bin, it is important to consider that fewer women have such a high number of pregnancies. "
    ]
   },
   {
@@ -888,7 +888,7 @@
    "source": [
     "##### Graph 2: Glucose Levels in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "From glucose levels of 80 -140, there is a higher proportion of women without Diabetes, compared to above levels of 150+ where there is a roughly equal proportion of women with and without Diabetes. The centers of women with and without diabetes are not the same, indicating on average, women with diabetes have a higher glucose level than women without diabetes."
+    "From glucose levels of 80 -140, there is a higher proportion of women without Diabetes, compared to above levels of 150+ where there is a roughly equal proportion of women with and without Diabetes. The centers of women with and without diabetes are note the same, indicating on average, women with diabetes have a higher glucose level than women without diabetes."
    ]
   },
   {
@@ -942,7 +942,7 @@
    "source": [
     "##### Graph 3: Blood Pressure Levels in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As blood pressure increases, the proportion of women with diabetes increases. This indicates that high blood pressure has a correlation to diabetes. \n"
+    "As blood pressure increases, the proportion of women with diabetes increases. This indicates that high blood pressure has a correlation to diabetes. "
    ]
   },
   {
@@ -1050,7 +1050,7 @@
    "source": [
     "##### Graph 5: Insulin Levels in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. Low Insulin levels seem to correlate with a higher frequency of women with diabetes. When the means of the distributions of women with and without diabetes are compared, we see that the means are similar, with the mean for women with diabetes being higher, suggesting that higher insulin leads to having diabetes."
+    "Increasing insulin levels show an increasing proportion of women with diabetes. This indicates that higher insulin levels correlate to Diabetes. "
    ]
   },
   {
@@ -1104,7 +1104,7 @@
    "source": [
     "##### Graph 6: BMI Score in Women, coloured by diabetes diagnosis\n",
     "\n",
-    "As we see above, there is a significant difference in this graph. High BMI levels seems to have a correlation with diabetes in women. Especially above ~50+. We see a peak in the number of women with diabetes around 35-40 BMI. When the means of the distributions of women with and without diabetes are compared, we see that the mean for women with diabetes is higher than that of women without, suggesting that higher BMI is correlated to having diabetes. "
+    "Increasing BMI shows an increased proportion of women with diabetes, especially at high values such as ~50 +. We see a peak in the number of women with diabetes around 35-40 BMI. This graph indicates that a high BMI is correlated with Diabetes."
    ]
   },
   {
@@ -1218,7 +1218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step we took was to determine which predictors to use to answer our question, based on their relevance to diabetes. In order to do this, we visualized the frequency of women with diabetes for each predictor, using histograms because it was easy to visualize the outcome since there are only two possibilities (4). To do so ggplot and geom_histogram were used (3). More importantly by creating two different x-intercepts one for women with diabetes (blue) and one for women without diabetes (red) a clear visualization was created. These codes were necessary to construct a distribution difference for each predictor between women with and women without diabetes."
+    "The next step to our exploratory analysis was to validate the significance of all the predictors present in the dataset. To do this, we visualized the frequency of women with and without diabetes for each predictor, using histograms for intuitive visualization of two possible outcomes. (4). Ggplot and geom_histogram were used (7). Furthermore, by obtaining a mean for women with and without diabetes of each predictor, it was made more clear what their frequencies represented."
    ]
   },
   {
@@ -1661,6 +1661,30 @@
     "Table 11: Predicted and True values as a table\n",
     "\n",
     "Graph 10: Visulization of confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**References**\n",
+    "\n",
+    "(1) Centers for Disease Control and Prevention. (2022, April 5). Diabetes risk factors. Centers for Disease Control and Prevention. Retrieved April 5, 2022, from https://www.cdc.gov/diabetes/basics/risk-factors.html \n",
+    "\n",
+    "(2) Collier, A., Patrick, A. W., Bell, D., Matthews, D. M., MacIntyre, C. C., Ewing, D. J., & Clarke, B. F. (1989). Relationship of skin thickness to duration of diabetes, glycemic control, and diabetic complications in male IDDM patients. Diabetes Care, 12(5), 309-312. https://doi.org/10.2337/diacare.12.5.309\n",
+    "\n",
+    "(3) Diabetes Dataset. (2020, 8 5). Kaggle. Retrieved 3 3, 2022, from https://www.kaggle.com/mathchi/diabetes-data-set\n",
+    "(4) Government of Canada, Statistics Canada. “5 Data Visualization 5.7 Histogram.” 5.7 Histogram, 2 Sept. 2021, https://www150.statcan.gc.ca/n1/edu/power-pouvoir/ch9/histo/5214822-eng.htm. \n",
+    "(5) Mayo Clinic Staff. (2020, 10 30). Diabetes. Mayo Clinic. Retrieved 3 3, 2022, from https://www.mayoclinic.org/diseases-conditions/diabetes/symptoms-causes/syc-20371444 \n",
+    "(6) Mayo Foundation for Medical Education and Research. (2021, June 25). Diabetes prevention: 5 tips for taking control. Mayo Clinic. Retrieved April 5, 2022, from https://www.mayoclinic.org/diseases-conditions/type-2-diabetes/in-depth/diabetes-prevention/art-20047639\n",
+    "(7) Timbers, T., Campbell, T., & Lee, M. (2022). Data Science: A first Introduction. CRC Press. https://datasciencebook.ca/index.html\n"
    ]
   },
   {
