Latest with correct formatting 2:04 pm

--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**METHODOLOGY**\n",
+    "**METHODOLOGY AND RESULTS**\n",
     "\n"
    ]
   },
@@ -1674,16 +1674,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**References**\n",
+    "**Referenc**\n",
     "\n",
     "(1) Centers for Disease Control and Prevention. (2022, April 5). Diabetes risk factors. Centers for Disease Control and Prevention. Retrieved April 5, 2022, from https://www.cdc.gov/diabetes/basics/risk-factors.html \n",
     "\n",
     "(2) Collier, A., Patrick, A. W., Bell, D., Matthews, D. M., MacIntyre, C. C., Ewing, D. J., & Clarke, B. F. (1989). Relationship of skin thickness to duration of diabetes, glycemic control, and diabetic complications in male IDDM patients. Diabetes Care, 12(5), 309-312. https://doi.org/10.2337/diacare.12.5.309\n",
     "\n",
     "(3) Diabetes Dataset. (2020, 8 5). Kaggle. Retrieved 3 3, 2022, from https://www.kaggle.com/mathchi/diabetes-data-set\n",
+    "\n",
     "(4) Government of Canada, Statistics Canada. “5 Data Visualization 5.7 Histogram.” 5.7 Histogram, 2 Sept. 2021, https://www150.statcan.gc.ca/n1/edu/power-pouvoir/ch9/histo/5214822-eng.htm. \n",
+    "\n",
     "(5) Mayo Clinic Staff. (2020, 10 30). Diabetes. Mayo Clinic. Retrieved 3 3, 2022, from https://www.mayoclinic.org/diseases-conditions/diabetes/symptoms-causes/syc-20371444 \n",
+    "\n",
     "(6) Mayo Foundation for Medical Education and Research. (2021, June 25). Diabetes prevention: 5 tips for taking control. Mayo Clinic. Retrieved April 5, 2022, from https://www.mayoclinic.org/diseases-conditions/type-2-diabetes/in-depth/diabetes-prevention/art-20047639\n",
+    "\n",
     "(7) Timbers, T., Campbell, T., & Lee, M. (2022). Data Science: A first Introduction. CRC Press. https://datasciencebook.ca/index.html\n"
    ]
   },
