Changes to headers of sections but up for interpretation @2:50 pm

--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**METHODOLOGY AND RESULTS**\n",
+    "**EXPLORATORY DATA ANALYSIS**\n",
     "\n"
    ]
   },
@@ -1225,6 +1225,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**METHODOLOGY AND RESULTS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**ClASSIFICATION PREDICTIVE MODEL**"
    ]
   },
@@ -1384,7 +1391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table 9: The accuracy of the diebetes data"
+    "##### Table 9: The accuracy of the diebetes data"
    ]
   },
   {
@@ -1429,7 +1436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Graph 9: Graph to indicate our K value "
+    "##### Graph 9: Graph to indicate our K value "
    ]
   },
   {
@@ -1480,7 +1487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table 10: Predicted and True values as a tibble"
+    "##### Table 10: Predicted and True values as a tibble"
    ]
   },
   {
@@ -1525,9 +1532,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table 11: Predicted and True values as a table\n",
+    "##### Table 11: Predicted and True values as a table\n",
     "\n",
-    "Graph 10: Visulization of confusion matrix"
+    "##### Graph 10: Visulization of confusion matrix"
    ]
   },
   {
