--- a/data/Final Group 41.ipynb
+++ b/data/Final Group 41.ipynb
@@ -102,9 +102,9 @@
     "\n",
     "**INTRODUCTION**\n",
     "\n",
-    "Diabetes is a disease in which the human body is no longer able to control the delicate balance of sugar in the bloodstream, which can have serious implications. It is split up into three main types, each with its causes and risk factors. Type 1 diabetes happens when the pancreas no longer produces insulin, a protein that will decrease the amount of glucose (sugar) in the blood; while the cause of type 1 diabetes isn’t yet known, there is some indication that there might be a significant hereditary component. In type 2 diabetes the body becomes resistant to its insulin and while the cause is still mostly unknown, excess body weight, high blood pressure, genetics, and age are all factors that contribute. Gestational diabetes is similar to type 2 diabetes, the main difference being that pregnancy hormones cause its onset(5).\n",
+    "Diabetes is a disease in which the human body is no longer able to control the delicate balance of sugar in the bloodstream, which can have serious implications. It is split up into three main types, each with its own causes and risk factors. Type 1 diabetes happens when the pancreas no longer produces insulin, a protein that will decrease the amount of glucose (sugar) in the blood; while the cause of type 1 diabetes isn’t yet known, there is some indication that there might be a significant hereditary component. In type 2 diabetes the body becomes resistant to its insulin and while the cause is still mostly unknown, excess body weight, high blood pressure, genetics, and age are all factors that contribute. Gestational diabetes is similar to type 2 diabetes, the main difference being that pregnancy hormones cause its onset (5).\n",
     "\n",
-    "We seek to explore the following question: Can we determine if a woman has diabetes based on predictors such as blood glucose levels, blood pressure, number of pregnancies, insulin levels, BMI, age, skin thickness, and genetics (called diabetes pedigree function)? To answer this question, we use data collected by the National Institute of Diabetes and Digestive and Kidney Diseases. The particular data set surveyed women over the age of 21 of Pima Indian heritage(3)."
+    "We seek to explore the following question: Can we determine if a woman has diabetes based on the predictors: such as blood glucose levels, blood pressure, number of pregnancies, insulin levels, BMI, age, skin thickness, and genetics (called diabetes pedigree function)? To answer this question, we use data collected by the National Institute of Diabetes and Digestive and Kidney Diseases. The particular data set surveyed women over the age of 21 of Pima Indian heritage (3)."
    ]
   },
   {
@@ -783,7 +783,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We summarized the data in terms of the mean of each predictor so that the means of the histograms can be set. The mean of all the predictors for both outcomes were found as well. We repeated this for the maximum and minimum of each predictor. "
+    "We summarized the data in terms of the mean of each predictor so that the means of the histograms can be set. The mean of all the predictors for both outcomes were found as well. The predictors with an outcome of 1 and an outcome of 0 had different means with respect to   \n",
+    "We repeated this for the maximum and minimum of each predictor. "
    ]
   },
   {
